--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ColorPicker</string>
+    <string name="brightness">Brightness %</string>
+    <string name="transparency">Transparency %</string>
 </resources>
